--- a/base.html
+++ b/base.html
@@ -8,7 +8,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<meta http-equiv="imagetoolbar" content="no" />
 	<meta name="language" content="ko" />	
-	<meta name="viewport" content="width=1568px, initial-scale=1.0">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
 	<meta name="apple-mobile-web-app-status-bar-style" content="black" />
 	<meta name="apple-mobile-web-app-capable" content="yes" />
 	<meta name="format-detection" content="telephone=no, address=no, email=no" />
@@ -29,7 +29,7 @@
 
 <body>
 
-<div class="wrap_template bg_visual1">		
+<div class="wrap_template bg_visual1">	
 
 	<div class="wrap_section">
 		<h1>평가모음</h1>
